# cashflow-story-pipeline

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  env.example  thresholds.yaml
config/companies/: austa.yaml
docs/: PRD.md  TECHNICAL_SPEC.md  handoff.yaml
docs/ADR/: 001-python-pipeline.md  002-pipeline-over-webapp.md  003-single-ai-provider.md  004-config-driven-mapping.md  005-cashflow-story-framework.md  006-output-first-design.md  007-immutable-data-pipeline.md
scripts/: setup_cron.sh  watch.py
src/: __init__.py  main.py  pipeline.py
src/ai/: __init__.py  analyst.py  prompts.py
src/calc/: __init__.py  balance_sheet.py  brazilian_tax.py  cash_flow.py  cash_quality.py  income_statement.py  marginal_cashflow.py  power_of_one.py  ratios.py  working_capital.py
src/ingest/: __init__.py  account_mapper.py  xlsx_parser.py  xml_parser.py
src/models/: __init__.py  cashflow_story.py  financial_data.py
src/output/: __init__.py  excel_report.py  html_dashboard.py  json_export.py  pdf_report.py
src/utils/: __init__.py  formatters.py  logger.py  validators.py
tests/: __init__.py  conftest.py  test_account_mapper.py  test_analyst.py  test_brazilian_tax.py  test_cash_quality.py  test_output.py  test_pipeline.py  test_power_of_one.py  test_xml_parser.py
tests/fixtures/: sample_balancete.xml
